kubernetes/platform/tailscale-operator/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-private
  namespace: argocd
  annotations:
    tailscale.com/tags: "tag:k8s"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - argocd
  rules:
    - host: argocd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
